# pip_info_demo

./: .gitignore  README.md  pyproject.toml
docs/: first.md
etc/beta/: common.conf  supervisor-pip_info.conf  web.conf
etc/development/: common.conf  supervisor-pip_info.conf
etc/production/: api.conf  common.conf  supervisor-pip_info.conf
server/: __init__.py  conf.py  extensions.py
server/apps/api/: __init__.py
server/apps/scripts/: console.py
server/apps/web/: __init__.py
tests/: test_pip_info.py
